[package]
name = "stm32f7-netscan"
version = "0.1.0"
authors = ["Simon Thelen <urday@student.kit.edu>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"
pin-utils = "0.1.0-alpha"
core = {path = "core"}

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]

[dependencies.stm32f7-discovery]
# git = "https://github.com/embed-rs/stm32f7-discovery.git"
git = "https://github.com/rust-mikrokontroller-praktikum/stm32f7-discovery.git"
branch = "broadcast"

# [dependencies.net]
# git = "https://github.com/rust-mikrokontroller-praktikum/net.git"

[dependencies.byteorder]
version = "1.0"
default-features = false

[dependencies.managed]
version = "0.7.1"
default-features = false

[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/rust-mikrokontroller-praktikum/smoltcp.git"
branch = "public"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-ipv6", "proto-dhcpv4"]

[dependencies.font8x8]
version = "0.2.4"
default-features = false
features = ["unicode"]

[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs.git"
default-features = false
features = ["alloc", "nightly"]

[patch.crates-io.cortex-m-rt]
# TODO: replace with crates.io version when new version is released
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
